--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ fsspec==2025.7.0
 google-auth==2.40.3
 google-genai==1.27.0
 greenlet==3.2.3
+gunicorn==23.0.0
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
